[tool.poetry]
name = "get-papers-list"
version = "0.1.0"
description = "Fetch PubMed papers with biotech/pharma authors"
authors = ["Jrsandy26 <sandeepsai1915@gmail.com>"]
readme = "README.md"
packages = [{ include = "get_papers", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.4"
click = "^8.1.7"
beautifulsoup4 = "^4.13.4"
lxml = "^6.0.0"
pandas = "^2.3.1"
tqdm = "^4.67.1"

[tool.poetry.scripts]
get-papers-list = "get_papers.cli:cli"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
